[WK2] Fix the build and enable the NetworkProcess by default on iOS https://bugs.webkit.org/show_bug.cgi?id=125723

Patch by Benjamin Poulain <bpoulain@apple.com> on 2013-12-13
Reviewed by Sam Weinig.

* Configurations/WebKit2.xcconfig:
Fix the list of excluded file to get the processes building.

* NetworkProcess/ios/NetworkProcessIOS.mm:
(WebKit::NetworkProcess::allowSpecificHTTPSCertificateForHosAt):
Update PlatformCertificateInfo->CertificateInfo match the new name after r159647.

* UIProcess/API/Cocoa/WKProcessGroup.mm:
(-[WKProcessGroup initWithInjectedBundleURL:]):
Enable the NetworkProcess by default.

* UIProcess/Network/mac/NetworkProcessProxyMac.mm:
(WebKit::shouldUseXPC):
Use the right macro.

* WebKit2Prefix.h:
Eanble the flags NETWORK_PROCESS and CUSTOM_PROTOCOLS.


Canonical link: https://commits.webkit.org/143752@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@160584 268f45cc-cd09-0410-ab3c-d52691b4dbfc